2009-03-10  Claude Paroz  <claude@2xlibre.net>

	* src/connection-editor/ce-page-ppp.glade
	    - Remove translatable property on stock labels
	
	* src/connection-editor/page-ppp.c
	    - Add translator comment for 'none' string

2009-03-03  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/nma-gconf-connection.c
		- CVE-2009-0578: restrict connection changes to applet user
		- (update, do_delete, is_user_authorized):  check UID of dbus request

2009-03-03  Dan Williams  <dcbw@redhat.com>

	* nm-applet.conf
		- CVE-2009-0365: only allow root to get secrets

2009-02-19  Dan Williams  <dcbw@redhat.com>

	* src/wireless-security/eap-method-peap.c
		- Allow forcing PEAP v0 as well; default to "Automatic" PEAP
			version (rh #468844)

2009-02-18  Dan Williams  <dcbw@redhat.com>

	Patch by paolo borelli <pborelli@katamail.com>

	* src/applet.c
	  src/gconf-helpers/gconf-upgrade.c
	  src/wireless-dialog.c
		- Fix some memory leaks (bgo #570869)

2009-02-18  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (ICON_LOAD): don't segfault if err is NULL (bgo #548062)
		- (finalize): dispose of the settings proxies after disposing
			of the NMClient so that the new-ap-notification stuff
			in applet-device-wifi.c does log errors when disposing
			of its data
		- (constructor): ensure the missing gladefile warning dialog sticks around
		- (nma_icons_load): ensure the missing icon warning dialog sticks around

	* src/applet-dialogs.c
	  src/applet-dialogs.h
		- (applet_warning_dialog_show): return the dialog object so the caller
			can do something useful with it (like gtk_dialog_run()); fix
			focus-stealing prevention, and set a title and icon

	* src/main.c
		- Pass the mainloop to the applet

2009-02-17  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-helpers.c
	  src/gconf-helpers/gconf-helpers.h
		- (nm_gconf_clear_keyring_items): clear keyring items for a
			connection

	* src/connection-editor/nm-connection-list.c